--- a/settings.html
+++ b/settings.html
@@ -1,4 +1,4 @@
-<div id="inland-empire-extension-settings">
+<div id="inland-empire-extension-settings" class="extension_container">
     <div class="inline-drawer">
         <div class="inline-drawer-toggle inline-drawer-header">
             <b><i class="fa-solid fa-brain"></i> Inland Empire</b>
@@ -17,17 +17,17 @@
             <div style="margin-top: 10px;">
                 <small class="notes">
                     <strong>Quick Start:</strong><br>
-                    1. Open the Psyche panel (floating on the right)<br>
-                    2. Click the ⚙️ gear icon to configure your API<br>
-                    3. Click the ✏️ icon to customize your build<br>
+                    1. Look for the 🧠 button on the left side<br>
+                    2. Click it to open the Psyche panel<br>
+                    3. Configure your API in Settings tab<br>
                     4. Your inner voices will comment on AI messages
                 </small>
             </div>
             
-            <div style="margin-top: 10px; display: flex; gap: 10px;">
-                <a href="https://github.com/your-repo/inland-empire" target="_blank" class="menu_button" style="flex: 1; text-align: center; text-decoration: none;">
-                    <i class="fa-brands fa-github"></i> GitHub
-                </a>
+            <div style="margin-top: 10px;">
+                <button id="ie-toggle-panel-btn" class="menu_button" style="width: 100%;">
+                    <i class="fa-solid fa-brain"></i> Open Psyche Panel
+                </button>
             </div>
         </div>
     </div>
