--- a/settings.html
+++ b/settings.html
@@ -1,4 +1,4 @@
-<div id="inland-empire-extension-settings" class="extension_container">
+<div id="inland-empire-extension-settings">
     <div class="inline-drawer">
         <div class="inline-drawer-toggle inline-drawer-header">
             <b><i class="fa-solid fa-brain"></i> Inland Empire</b>
@@ -17,17 +17,11 @@
             <div style="margin-top: 10px;">
                 <small class="notes">
                     <strong>Quick Start:</strong><br>
-                    1. Look for the 🧠 button on the left side<br>
+                    1. Look for the brain icon button on the left<br>
                     2. Click it to open the Psyche panel<br>
-                    3. Configure your API in Settings tab<br>
+                    3. Go to Settings tab to configure your API<br>
                     4. Your inner voices will comment on AI messages
                 </small>
-            </div>
-            
-            <div style="margin-top: 10px;">
-                <button id="ie-toggle-panel-btn" class="menu_button" style="width: 100%;">
-                    <i class="fa-solid fa-brain"></i> Open Psyche Panel
-                </button>
             </div>
         </div>
     </div>
