--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,7 @@
                 <span>Enable Inland Empire</span>
             </label>
             <small class="notes">
-                Disco Elysium-style internal voices that comment on your roleplay. 
+                Disco Elysium-style internal voices with Thought Cabinet! 
                 Configure API settings and build your psyche in the floating panel.
             </small>
             
@@ -20,7 +20,7 @@
                     1. Look for the brain icon button on the left<br>
                     2. Click it to open the Psyche panel<br>
                     3. Go to Settings tab to configure your API<br>
-                    4. Your inner voices will comment on AI messages
+                    4. Check the Cabinet tab for discovered thoughts!
                 </small>
             </div>
         </div>
