--- a/settings.html
+++ b/settings.html
@@ -10,17 +10,17 @@
                 <span>Enable Inland Empire</span>
             </label>
             <small class="notes">
-                Disco Elysium-style internal voices with authentic skill personalities and Thought Cabinet!
+                Disco Elysium-style internal voices with Thought Cabinet! 
+                Configure API settings and build your psyche in the floating panel.
             </small>
             
             <div style="margin-top: 10px;">
                 <small class="notes">
-                    <strong>v0.7.2 - What's New:</strong><br>
-                    - Authentic skill personalities from DE research<br>
-                    - Three Ancient Voices: Reptilian Brain, Limbic System, Spinal Cord<br>
-                    - Fixed: Ancient voices only trigger on specific statuses<br>
-                    - Simplified dice display [Difficulty ✓/✗]<br>
-                    - Proper chat injection (no more textarea bugs)<br>
+                    <strong>Quick Start:</strong><br>
+                    1. Look for the brain icon button on the left<br>
+                    2. Click it to open the Psyche panel<br>
+                    3. Go to Settings tab to configure your API<br>
+                    4. Check the Cabinet tab for discovered thoughts!
                 </small>
             </div>
         </div>
